# AudioEffectsFramework

./: .gitignore  AudioEffect.cpp  AudioEffect.h  AudioEffectDistortion.cpp  AudioEffectFlanger.h  AudioEffectIF.cpp  Biquad.m  CMakeLists.txt  Lfo.h  README.md  doxygen_config
Testing/: Compressor_Expander.m  chorus.m  compare.m  delay.m  distortion.m  flanger.m  gdist.m  main.m  matpan.m  panorama.m  schroeder1.m  test.m  unicomb.m
Testing/Schroder/: allpass.m
Testing/Schroeder/: allpass.m  delay.m  fbcomb.m  ffcomb.m  parallelcoefficients.m
Testing/effects/: Biquad.m  chorus.m  comp_exp.m  delay.m  distortion.m  flanger.m  panorama.m  schroeder.m
Testing_new/: comp_exp.m  compare.m  delay.m  distortion.m  flanger.m  schroeder.m
cmake.modules/: AddCppcheckTest.cmake  FindCppcheck.cmake  Findcppcheck.cpp  GenerateCppcheck.cmake  SetOutputDir.cmake  SetPlatform.cmake
docs/: _config.yml  index.html
docs/html/: _audio_effect_2_c_make_lists_8txt.html  _audio_effect_8cpp.html  _audio_effect_8h.html  _audio_effect_8h__dep__incl.dot  _audio_effect_8h__dep__incl.map  _audio_effect_8h__dep__incl.md5  _audio_effect_8h__incl.map  _audio_effect_8h__incl.md5  _audio_effect_8h_source.html  _audio_effect_biquad_8cpp.html  _audio_effect_biquad_8cpp__incl.dot  _audio_effect_biquad_8cpp__incl.map  _audio_effect_biquad_8cpp__incl.md5  _audio_effect_biquad_8h.html  _audio_effect_biquad_8h__dep__incl.map  _audio_effect_biquad_8h__dep__incl.md5  _audio_effect_biquad_8h__incl.dot  _audio_effect_biquad_8h__incl.map  _audio_effect_biquad_8h__incl.md5  _audio_effect_biquad_8h_source.html  _audio_effect_compressor_8cpp.html  _audio_effect_compressor_8cpp__incl.md5  _audio_effect_compressor_8h__dep__incl.map  _audio_effect_compressor_8h__dep__incl.md5  _audio_effect_compressor_8h__incl.map  _audio_effect_compressor_8h__incl.md5  _audio_effect_compressor_8h_source.html  _audio_effect_delay_8cpp__incl.map  _audio_effect_delay_8cpp__incl.md5  _audio_effect_delay_8h.html  _audio_effect_delay_8h__dep__incl.map  _audio_effect_delay_8h__dep__incl.md5  _audio_effect_delay_8h__incl.md5  _audio_effect_delay_8h_source.html  _audio_effect_distortion_8cpp.html  _audio_effect_distortion_8cpp__incl.map  _audio_effect_distortion_8cpp__incl.md5  _audio_effect_distortion_8h.html  _audio_effect_distortion_8h__dep__incl.dot  _audio_effect_distortion_8h__dep__incl.map  (+259 more)
docs/latex/: _audio_effect_2_c_make_lists_8txt.tex  _audio_effect_8cpp.tex  _audio_effect_8cpp__incl.md5  _audio_effect_8h.tex  _audio_effect_8h__dep__incl.dot  _audio_effect_8h__dep__incl.md5  _audio_effect_biquad_8cpp.tex  _audio_effect_biquad_8cpp__incl.dot  _audio_effect_biquad_8cpp__incl.md5  _audio_effect_biquad_8h.tex  _audio_effect_biquad_8h__dep__incl.md5  _audio_effect_biquad_8h__incl.dot  _audio_effect_biquad_8h__incl.md5  _audio_effect_compressor_8cpp.tex  _audio_effect_compressor_8cpp__incl.md5  _audio_effect_compressor_8h.tex  _audio_effect_compressor_8h__incl.md5  _audio_effect_delay_8cpp.tex  _audio_effect_delay_8cpp__incl.md5  _audio_effect_delay_8h.tex  _audio_effect_delay_8h__incl.md5  _audio_effect_distortion_8cpp.tex  _audio_effect_distortion_8cpp__incl.md5  _audio_effect_distortion_8h.tex  _audio_effect_distortion_8h__dep__incl.dot  _audio_effect_distortion_8h__dep__incl.md5  _audio_effect_distortion_8h__incl.md5  _audio_effect_gain_8cpp.tex  _audio_effect_gain_8cpp__incl.md5  _audio_effect_gain_8h.tex  _audio_effect_gain_8h__dep__incl.md5  _audio_effect_pan_8cpp.tex  _audio_effect_pan_8cpp__incl.md5  _audio_effect_pan_8h.tex  _audio_effect_pan_8h__dep__incl.dot  _audio_effect_pan_8h__dep__incl.md5  _audio_effect_pan_8h__incl.md5  _audio_effect_reverb_8cpp.tex  _audio_effect_reverb_8cpp__incl.md5  _audio_effect_reverb_8h.tex  (+102 more)
doxygen/html/: _audio_effect_8cpp__incl.map  _audio_effect_8cpp__incl.md5  _audio_effect_8h.html  _audio_effect_8h__dep__incl.md5  _audio_effect_biquad_8h.html  _audio_effect_biquad_8h__dep__incl.md5  _audio_effect_biquad_8h_source.html  _audio_effect_compressor_8cpp__incl.map  _audio_effect_compressor_8h.html  _audio_effect_delay_8cpp.html  _audio_effect_delay_8h__incl.map  _audio_effect_delay_8h_source.html  _audio_effect_distortion_8h__incl.map  _audio_effect_distortion_8h_source.html  _audio_effect_gain_8h.html  _audio_effect_pan_8h.html  _audio_file_8cpp.html  _audio_file_8h_source.html  _audio_file_if_8h__incl.map  _audio_fx_framework_exec_8cpp.html  _lfo_8h.html  _lfo_8h.js  _lfo_8h__dep__incl.md5  _lfo_8h__incl.md5  _lfo_8h_source.html  _synthesis_8h.html  _test_8cpp.html  _test_8cpp__incl.map  _test___audio_effect_biquad_8cpp.html  _test___audio_effect_compressor_8cpp__incl.map  _test___audio_effect_distortion_8cpp__incl.md5  _test___audio_i_o_8cpp__incl.map  _tests_2_test_exec_2_c_make_lists_8txt.html  _vector_8h__dep__incl.map  _vector_8h__incl.md5  class_c_audio_effect-members.html  class_c_audio_effect.html  class_c_audio_effect__inherit__graph.map  class_c_audio_effect_biquad-members.html  class_c_audio_effect_biquad.html  (+55 more)
doxygen/latex/: _audio_effect_8h.tex  _audio_effect_8h__incl.md5  _audio_effect_biquad_8h.tex  _audio_effect_biquad_8h__incl.md5  _audio_effect_compressor_8cpp.tex  _audio_effect_compressor_8h.tex  _audio_effect_compressor_8h__dep__incl.md5  _audio_effect_delay_8h__dep__incl.md5  _audio_effect_gain_8h__incl.md5  _audio_effect_pan_8h__dep__incl.md5  _audio_file_8h.tex  _audio_file_8h__dep__incl.md5  _lfo_8h__incl.md5  annotated.tex  (+29 more)
inc/: EffectDef.h  ErrorDef.h
release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: AudioEffectIF.h  AudioFxFrameworkConfig.h.in  doxy.config.in
src/AudioEffect/: AEGain.cpp  AEGain.h  AudioEffect.cpp  AudioEffect.h  AudioEffectBiquad.cpp  AudioEffectCompressor.cpp  AudioEffectDelay.cpp  AudioEffectDistortion.cpp  AudioEffectGain.cpp  AudioEffectIF.cpp  AudioEffectIF.h  AudioEffectPan.cpp  AudioEffectReverb.cpp  CMakeLists.txt
src/AudioFileIO/: AudioFile.cpp  AudioFileIf.cpp  CMakeLists.txt
src/AudioFxFrameworkExec/: AudioFxFrameworkExec.cpp  CMakeLists.txt
src/Tests/TestExec/: CMakeLists.txt  Test.cpp
(+130 files in other folders)
